Removing date in the title on the post

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <article class="post">
-  <h1><a href="{{ site.baseurl }}/"><img src="https://avatars1.githubusercontent.com/u/1640786?s=24&v=4" alt="Home"></a> > {{ page.date | date: "%d %B %Y" }} - {{ page.title }}</h1>
+  <h1><a href="{{ site.baseurl }}/"><img src="https://avatars1.githubusercontent.com/u/1640786?s=24&v=4" alt="Home"></a> >{{ page.title }}</h1>
 
   <div class="entry">
     {{ content }}
