Reorganising template and styling

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,10 +1,7 @@
----
-layout: default
----
 <!doctype html>
 <html>
   <head>
-    <link rel="stylesheet" type="text/css" href="/css/main.css">    
+    <link rel="stylesheet" type="text/css" href="/assets/css/main.css">    
   </head>
 
   <h1><img src="https://avatars1.githubusercontent.com/u/1640786?s=30&v=4" alt="Home"> Slow Monkey Codes</h1>
