Trying to add the original default styles

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,9 +1,10 @@
 <!doctype html>
 <html>
   <head>
-    <link rel="stylesheet" type="text/css" href="/assets/css/main.css">    
     <meta charset="utf-8">
     <title>{{ page.title }}</title>
+    <link rel="stylesheet" type="text/css" href="/assets/css/styles.css">
+    <link rel="stylesheet" type="text/css" href="/assets/css/main.css">
   </head>
   <body>
       {{ content }}
