Messing with the styles

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,8 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>{{ page.title }}</title>
-    <link rel="stylesheet" type="text/css" href="/assets/css/styles.css">
-    <link rel="stylesheet" type="text/css" href="/assets/css/main.css">
+    <link rel="stylesheet" type="text/css" href="/assets/css/github-repo-card.css">
   </head>
   <body>
       {{ content }}
