Trying to go back to the normal styling

--- a/_includes/repo_card.html
+++ b/_includes/repo_card.html
@@ -1,3 +1,4 @@
+{% includes "_sass/github-repo-card.scss" %}
 {% assign repository = site.github.public_repositories 
     | where: "name", include.reponame 
     | first %}
