--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -2,4 +2,16 @@
 ---
 
 @import "{{ site.theme }}";
-@import "github-repo-card"
+@import "github-repo-card";
+
+.entry p {
+    margin-bottom: 0px;
+}
+
+.post h1 {
+    border-bottom: 2px solid $black;
+}
+
+.post h2 {
+    border-bottom: 2px solid $black;
+}
