Styling on the relevant headings

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -8,10 +8,6 @@
     margin-bottom: 0px;
 }
 
-.post h1:first-child {
-    border-bottom: 2px solid $black;
-}
-
-.post h2:first-child {
+.index-post-title {
     border-bottom: 2px solid $black;
 }
