Styling on the relevant headings

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -8,6 +8,10 @@
     margin-bottom: 0px;
 }
 
+.index-title {
+    border-bottom: 2px solid $black !important;
+}
+
 .index-post-title {
     border-bottom: 2px solid $black !important;
 }
