--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,15 +1,26 @@
 ---
 layout: default
 ---
+{% include sidebar.html %}
 
-<article class="post">
-  <div class="date">
-    Written on {{ page.date | date: "%d %B %Y" }}
-  </div>  
+<div class="post">
+  <h1 class="post-title">{{ page.title }}</h1>
+  <span class="post-date">{{ page.date | date_to_string }}</span>
+  {{ content }}
+</div>
 
-  <h1><a href="{{ site.baseurl }}/"><img src="https://avatars1.githubusercontent.com/u/1640786?s=24&v=4" alt="Home"></a> {{ page.title }}</h1>
-
-  <div class="entry">
-    {{ content }}
-  </div>
-</article>
+<!-- <div class="related">
+  <h2>Related Posts</h2>
+  <ul class="related-posts">
+    {% for post in site.related_posts limit:3 %}
+      <li>
+        <h3>
+          <a href="{{ post.url }}">
+            {{ post.title }}
+            <small>{{ post.date | date_to_string }}</small>
+          </a>
+        </h3>
+      </li>
+    {% endfor %}
+  </ul>
+</div> -->
