Trying to hardcode the home page links for a fix

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -4,11 +4,11 @@
   </div>   -->
   <div class="container sidebar-sticky">
 
-    <a class="github-avatar-link" href="{{ site.baseurl }}"><img class="github-avatar-image" src="https://avatars1.githubusercontent.com/u/1640786?s=460&v=4" alt="Home"></a>
+    <a class="github-avatar-link" href="/"><img class="github-avatar-image" src="https://avatars1.githubusercontent.com/u/1640786?s=460&v=4" alt="Home"></a>
 
     <div class="sidebar-about">
       <h1>
-        <a href="{{ site.baseurl }}">
+        <a href="/">
           {{ site.title }}
         </a>
       </h1>
