Cleaned up the location of assets and updated font sizes and spacing to my desired liking

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,16 +8,16 @@
   
     <title>
       {% if page.title == "Home" %}
-        {{ site.title }} &middot; {{ site.tagline }}
+        {{ site.title }}
       {% else %}
         {{ page.title }} &middot; {{ site.title }}
       {% endif %}
     </title>
   
     <!-- CSS -->
-    <link rel="stylesheet" href="{{ site.baseurl }}public/css/poole.css">
-    <link rel="stylesheet" href="{{ site.baseurl }}public/css/syntax.css">
-    <link rel="stylesheet" href="{{ site.baseurl }}public/css/hyde.css">
+    <link rel="stylesheet" href="{{ site.baseurl }}assets/css/poole.css">
+    <link rel="stylesheet" href="{{ site.baseurl }}assets/css/syntax.css">
+    <link rel="stylesheet" href="{{ site.baseurl }}assets/css/hyde.css">
     <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=PT+Sans:400,400italic,700|Abril+Fatface">
   
