--- a/assets/css/hyde.css
+++ b/assets/css/hyde.css
@@ -36,12 +36,12 @@
   }
   @media (min-width: 48em) {
     html {
-      font-size: 16px;
+      font-size: 12px;
     }
   }
   @media (min-width: 58em) {
     html {
-      font-size: 20px;
+      font-size: 16px;
     }
   }
   
@@ -84,7 +84,7 @@
     margin-top: 0;
     margin-bottom: 100px;
     font-family: "Abril Fatface", serif;
-    font-size: 3.25rem;
+    font-size: 2rem;
   }
   
   /* Sidebar nav */
@@ -140,6 +140,7 @@
   
   @media (min-width: 64em) {
     .content {
+      max-width: 48rem;
       margin-left: 22rem;
       margin-right: 4rem;
     }
