--- a/_includes/head.html
+++ b/_includes/head.html
@@ -15,9 +15,9 @@
     </title>
   
     <!-- CSS -->
-    <link rel="stylesheet" href="{{ site.baseurl }}assets/css/poole.css">
-    <link rel="stylesheet" href="{{ site.baseurl }}assets/css/syntax.css">
-    <link rel="stylesheet" href="{{ site.baseurl }}assets/css/hyde.css">
+    <link rel="stylesheet" href="/assets/css/poole.css">
+    <link rel="stylesheet" href="/assets/css/syntax.css">
+    <link rel="stylesheet" href="/assets/css/hyde.css">
     <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=PT+Sans:400,400italic,700|Abril+Fatface">
   
