--- a/_includes/head.html
+++ b/_includes/head.html
@@ -14,14 +14,16 @@
       {% endif %}
     </title>
   
+    <!-- favicon -->
+    <link rel="shortcut icon" href="https://avatars1.githubusercontent.com/u/1640786?s=160&v=4" />
+
     <!-- CSS -->
     <link rel="stylesheet" href="/assets/css/poole.css">
     <link rel="stylesheet" href="/assets/css/syntax.css">
     <link rel="stylesheet" href="/assets/css/hyde.css">
     <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=PT+Sans:400,400italic,700|Abril+Fatface">
-  
-  
+    
     <!-- RSS -->
     <link rel="alternate" type="application/rss+xml" title="RSS" href="/atom.xml">
 
