Adding RSS Feed to the blog

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -32,6 +32,8 @@
 
     <a class="sidebar-nav-item" href="{{ site.github.repo }}" alt="GitHub project" target="_blank"><i class="fab fa-github"></i></a>
 
+    <a class="sidebar-nav-item" href="/feed.xml" target="_blank"><i class="fas fa-rss"></i></a>
+
     <p>&copy; {{ site.time | date: '%Y' }}. All rights reserved.</p>
   </div>
   </div>
