--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,6 +3,8 @@
   {% include analytics.html %}
   {% endif %}
 
+  <link rel="alternate" type="application/atom+xml" title="Learning by breaking and failing" href="/feed.xml">
+
   <link href="http://gmpg.org/xfn/11" rel="profile">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
