--- a/assets/css/hyde.css
+++ b/assets/css/hyde.css
@@ -119,6 +119,11 @@
       bottom: 1rem;
       left:   1rem;
     }
+
+    .github-avatar-link {
+      width: 50px;
+      height: 50px;
+    }
   }
 
   /* Container
