--- a/_sass/cheatsheet.scss
+++ b/_sass/cheatsheet.scss
@@ -1,9 +1,11 @@
 .cheatsheet {
+  display: block;
   width: 100%;
   overflow-x: auto; /* allow scroll on small screens */
   margin: 1.5rem 0;
 
   table {
+    display: table;
     width: 100%; /* full width */
     min-width: 1400px; /* force wider than content */
     border-collapse: collapse;
