Adding dotnet dev container commands cheatsheat

--- a/_sass/cheatsheet.scss
+++ b/_sass/cheatsheet.scss
@@ -7,7 +7,7 @@
   table {
     display: table;
     width: 100%; /* full width */
-    min-width: 1400px !important; /* force wider than content */
+    min-width: 1400px; /* force wider than content */
     border-collapse: collapse;
     font-size: 0.95rem;
     background-color: #ffffff; // white background
